<resources>
    <string name="app_name">Score</string>
    <string name="textview1">Team A</string>
    <string name="textview2">Team B</string>
    <string name="scoreA" translatable="false">0</string>
    <string name="scoreB" translatable="false">0</string>
    <string name="button1" translatable="false">+1</string>
    <string name="button2" translatable="false">+2</string>
    <string name="button3" translatable="false">+3</string>
    <string name="imgButtonDescription" translatable="false">icon</string>
</resources>