<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="data"
            type="com.yett.score.MyViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.95" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.05" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.05" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.15" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.35" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.65" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.8" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.9" />

        <TextView
            android:id="@+id/textViewNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textview1"
            android:textColor="@color/teamAColor"
            android:textSize="@dimen/teamTextSize"
            app:layout_constraintBottom_toTopOf="@+id/guideline5"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintStart_toStartOf="@+id/guideline11"
            app:layout_constraintTop_toTopOf="@+id/guideline4" />

        <TextView
            android:id="@+id/textViewEnglish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textview2"
            android:textColor="#039BE5"
            android:textSize="@dimen/teamTextSize"
            app:layout_constraintBottom_toTopOf="@+id/guideline5"
            app:layout_constraintEnd_toStartOf="@+id/guideline12"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toTopOf="@+id/guideline4" />

        <TextView
            android:id="@+id/textViewChinese"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scoreA"
            android:textColor="@color/teamAColor"
            android:textSize="@dimen/scoreTextSize"
            app:layout_constraintBottom_toTopOf="@+id/guideline6"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintStart_toStartOf="@+id/guideline11"
            app:layout_constraintTop_toTopOf="@+id/guideline5"
            tools:text="@{String.valueOf(data.aTeamScore)}" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scoreB"
            android:textColor="#039BE5"
            android:textSize="@dimen/scoreTextSize"
            app:layout_constraintBottom_toTopOf="@+id/guideline6"
            app:layout_constraintEnd_toStartOf="@+id/guideline12"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toTopOf="@+id/guideline5"
            tools:text="@{String.valueOf(data.bTeamScore)}" />

        <Button
            android:id="@+id/button1"
            android:onClick="@{()->data.aTeamAdd(1)}"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/buttonMargin"
            android:backgroundTint="@color/teamAColor"
            android:text="@string/button1"
            android:textColor="@color/white"
            android:textSize="@dimen/buttonTextSize"
            app:layout_constraintBottom_toTopOf="@+id/guideline7"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintStart_toStartOf="@+id/guideline11"
            app:layout_constraintTop_toTopOf="@+id/guideline6"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <Button
            android:id="@+id/button2"
            android:onClick="@{()->data.bTeamAdd(1)}"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/buttonMargin"
            android:backgroundTint="@color/teamBColor"
            android:text="@string/button1"
            android:textColor="@color/white"
            android:textSize="@dimen/buttonTextSize"
            app:layout_constraintBottom_toTopOf="@+id/guideline7"
            app:layout_constraintEnd_toStartOf="@+id/guideline12"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toTopOf="@+id/guideline6"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/button3"
            android:onClick="@{()->data.aTeamAdd(2)}"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/buttonMargin"
            android:backgroundTint="@color/teamAColor"
            android:text="@string/button2"
            android:textColor="@color/white"
            android:textSize="@dimen/buttonTextSize"
            app:layout_constraintBottom_toTopOf="@+id/guideline8"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintStart_toStartOf="@+id/guideline11"
            app:layout_constraintTop_toTopOf="@+id/guideline7"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <Button
            android:id="@+id/button4"
            android:onClick="@{()->data.bTeamAdd(2)}"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/buttonMargin"
            android:backgroundTint="@color/teamBColor"
            android:text="@string/button2"
            android:textColor="@color/white"
            android:textSize="@dimen/buttonTextSize"
            app:layout_constraintBottom_toTopOf="@+id/guideline8"
            app:layout_constraintEnd_toStartOf="@+id/guideline12"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toTopOf="@+id/guideline7"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/button5"
            android:onClick="@{()->data.aTeamAdd(3)}"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/buttonMargin"
            android:backgroundTint="@color/teamAColor"
            android:text="@string/button3"
            android:textColor="@color/white"
            android:textSize="@dimen/buttonTextSize"
            app:layout_constraintBottom_toTopOf="@+id/guideline9"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintStart_toStartOf="@+id/guideline11"
            app:layout_constraintTop_toTopOf="@+id/guideline8"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <Button
            android:id="@+id/button6"
            android:onClick="@{()->data.bTeamAdd(3)}"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/buttonMargin"
            android:backgroundTint="@color/teamBColor"
            android:text="@string/button3"
            android:textColor="@color/white"
            android:textSize="@dimen/buttonTextSize"
            app:layout_constraintBottom_toTopOf="@+id/guideline9"
            app:layout_constraintEnd_toStartOf="@+id/guideline12"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toTopOf="@+id/guideline8"
            tools:ignore="TextContrastCheck" />

        <ImageButton
            android:id="@+id/imageButton1"
            android:onClick="@{()->data.undo()}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/imgButtonDescription"
            android:minHeight="48dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline10"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintStart_toStartOf="@+id/guideline11"
            app:layout_constraintTop_toTopOf="@+id/guideline9"
            app:srcCompat="@drawable/ic_baseline_undo_24"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <ImageButton
            android:id="@+id/imageButton2"
            android:onClick="@{()->data.reset()}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/imgButtonDescription"
            android:minHeight="48dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline10"
            app:layout_constraintEnd_toStartOf="@+id/guideline12"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toTopOf="@+id/guideline9"
            app:srcCompat="@drawable/ic_baseline_autorenew_24" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>